--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
-        "@tailwindcss/vite": "^4.0.0",
+        "@tailwindcss/postcss": "^4.1.16",
+        "@tailwindcss/typography": "^0.5.19",
+        "@tailwindcss/vite": "^4.1.16",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.21",
         "axios": "^1.11.0",
@@ -17,5 +19,8 @@
         "postcss": "^8.5.6",
         "tailwindcss": "^3.4.18",
         "vite": "^7.0.7"
+    },
+    "dependencies": {
+        "@tailwindcss/cli": "^4.1.16"
     }
 }
